--- a/index.html
+++ b/index.html
@@ -33,52 +33,59 @@
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
-    <header>
-      <nav>
-        <div class="logo">
+    <nav>
+      <div class="nav-container">
+        <div class="logo-container">
           <img class="logo-icon" src="./images/logo-icon.png" alt="logo" />
           <h2><span class="pink-letter">G</span>amer</h2>
         </div>
-        <div class="links">
-          <ul>
-            <li><a href="_blank">About Us</a></li>
-            <li><a href="_blank">Developers</a></li>
-            <li>
-              Follow Us On<span
-                ><a href="_blank"
-                  ><i
-                    class="fa-brands fa-youtube fa-lg"
-                    style="color: #f40b17"
-                  ></i
-                ></a>
-                <a href="_blank"
-                  ><img
-                    class="tiktok-logo"
-                    src="./images/tik-tok-logo.png"
-                    alt="Go to Tiktok" /></a
-              ></span>
-            </li>
-          </ul>
-        </div>
-      </nav>
-    </header>
-    <div class="hero-section">
-      <div class="hero-text">
-        <div class="hero-text-heading">Play Like The</div>
-        <h1>G.O.A.T.</h1>
-        <div class="hero-bullet-points">
-          <div>
-            <img src="./images/icons/1-click.svg" alt="" />1-Click instant play
-          </div>
-          <div><img src="./images/icons/download.svg" alt="" />No Download</div>
-          <div>
-            <img src="./images/icons/supporter.svg" alt="" />1000s of supported
-            online games
-          </div>
+        <div class="nav-links">
+          <li><a href="_blank">About Us</a></li>
+          <li><a href="_blank">Developers</a></li>
+          <li class="social-button">
+            Follow Us On<a href="_blank"
+              ><i class="fa-brands fa-youtube fa-lg" style="color: #f40b17"></i
+            ></a>
+            <a href="_blank"
+              ><img
+                class="tiktok-logo"
+                src="./images/tik-tok-logo.png"
+                alt="Go to Tiktok"
+            /></a>
+          </li>
         </div>
       </div>
-      <div class="hero-photo">
-        <img src="./images/hero-section-image.png" alt="" />
+    </nav>
+    <div class="hero-container">
+      <div class="hero-text-area">
+        <div class="hero-text">
+          <div class="hero-text-pre-heading">Play Like The</div>
+          <div class="hero-text-heading">G.O.A.T.</div>
+          <div class="bullet-points">
+            <div class="points">
+              <img src="./images/icons/1-click.svg" alt="" /><span
+                >1-Click instant play</span
+              >
+            </div>
+            <div class="points">
+              <img src="./images/icons/1-click.svg" alt="" />No Download
+            </div>
+            <div class="points">
+              <img src="./images/icons/supporter.svg" alt="" />1000s of
+              supported online games
+            </div>
+          </div>
+          <div class="hero-text-button">
+            <a class="button-primary button-color-1" href="_blank">Sign Up</a>
+            <a class="button-primary button-color-2" href="_blank">Go Rogue</a>
+          </div>
+        </div>
+        <div class="hero-text-background-image">
+          <img src="./images/hero-section-bg.png" alt="" />
+        </div>
+      </div>
+      <div class="hero-image-section">
+        <img class="hero-image" src="./images/hero-section-image.png" alt="" />
       </div>
     </div>
   </body>
