--- a/index.html
+++ b/index.html
@@ -88,5 +88,57 @@
         <img class="hero-image" src="./images/hero-section-image.png" alt="" />
       </div>
     </div>
+    <div class="gamer-section">
+      <div class="gamer-container">
+        <div class="gamer-image">
+          <img src="./images/gamer-section.png" alt="" />
+        </div>
+        <div class="gamer-text-area">
+          <h3>We are gamer</h3>
+          <p>
+            An international digital games and entertainment company. We
+            develop, publish and distribute multiplayer mobile games. We reach
+            over 400 million players each month and our audience keeps growing.
+          </p>
+          <a class="button-primary button-color-1" href="_blank">know more</a>
+          <div class="gamer-section-bottom-text">
+            Our purpose...<br /><span>“unleash the gamer in everyone”</span>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="funny-video-section">
+      <div class="funny-video-heading">
+        Online Games <span>Funny Videos</span>
+      </div>
+
+      <p>A Collection of Hilarious Videos to Brighten Your Day</p>
+      <div class="cards-container">
+        <div class="card">
+          <div class="card-image">
+            <img src="./images/cards-1.png" alt="" />
+          </div>
+          <p>No Download. No Installs. Play games Instantly on Gamer.</p>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="./images/cards-1.png" alt="" />
+          </div>
+          <p>No Download. No Installs. Play games Instantly on Gamer.</p>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="./images/cards-1.png" alt="" />
+          </div>
+          <p>No Download. No Installs. Play games Instantly on Gamer.</p>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="./images/cards-1.png" alt="" />
+          </div>
+          <p>No Download. No Installs. Play games Instantly on Gamer.</p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
