Funny Video Section Added

--- a/index.html
+++ b/index.html
@@ -56,37 +56,48 @@
         </div>
       </div>
     </nav>
-    <div class="hero-container">
-      <div class="hero-text-area">
-        <div class="hero-text">
-          <div class="hero-text-pre-heading">Play Like The</div>
-          <div class="hero-text-heading">G.O.A.T.</div>
-          <div class="bullet-points">
-            <div class="points">
-              <img src="./images/icons/1-click.svg" alt="" /><span
-                >1-Click instant play</span
+    <div class="hero-section">
+      <div class="hero-container">
+        <div class="hero-text-area">
+          <div class="hero-text">
+            <div class="hero-text-pre-heading">Play Like The</div>
+            <div class="hero-text-heading">G.O.A.T.</div>
+            <div class="bullet-points">
+              <div class="points">
+                <img src="./images/icons/1-click.svg" alt="" /><span
+                  >1-Click instant play</span
+                >
+              </div>
+              <div class="points">
+                <img src="./images/icons/download.svg" alt="" />No Download
+              </div>
+              <div class="points">
+                <img src="./images/icons/supporter.svg" alt="" />1000s of
+                supported online games
+              </div>
+            </div>
+            <div class="hero-text-button">
+              <a class="button-primary button-color-1" href="_blank">Sign Up</a>
+              <a class="button-primary button-color-2" href="_blank"
+                >Go Rogue</a
               >
             </div>
-            <div class="points">
-              <img src="./images/icons/1-click.svg" alt="" />No Download
-            </div>
-            <div class="points">
-              <img src="./images/icons/supporter.svg" alt="" />1000s of
-              supported online games
-            </div>
-          </div>
-          <div class="hero-text-button">
-            <a class="button-primary button-color-1" href="_blank">Sign Up</a>
-            <a class="button-primary button-color-2" href="_blank">Go Rogue</a>
           </div>
         </div>
-        <div class="hero-text-background-image">
-          <img src="./images/hero-section-bg.png" alt="" />
+        <div class="hero-image-section">
+          <img
+            class="hero-image"
+            src="./images/hero-section-image.png"
+            alt=""
+          />
         </div>
       </div>
-      <div class="hero-image-section">
-        <img class="hero-image" src="./images/hero-section-image.png" alt="" />
-      </div>
+
+      <img
+        class="hero-text-background-image"
+        src="./images/hero-section-bg.png"
+        alt=""
+      />
     </div>
     <div class="gamer-section">
       <div class="gamer-container">
@@ -115,28 +126,20 @@
       <p>A Collection of Hilarious Videos to Brighten Your Day</p>
       <div class="cards-container">
         <div class="card">
-          <div class="card-image">
-            <img src="./images/cards-1.png" alt="" />
-          </div>
+          <img class="card-image" src="./images/cards-1.png" alt="" />
           <p>No Download. No Installs. Play games Instantly on Gamer.</p>
         </div>
         <div class="card">
-          <div class="card-image">
-            <img src="./images/cards-1.png" alt="" />
-          </div>
-          <p>No Download. No Installs. Play games Instantly on Gamer.</p>
+          <img class="card-image" src="./images/cards-2.png" alt="" />
+          <p>Did you score? #unblockedgames #school</p>
         </div>
         <div class="card">
-          <div class="card-image">
-            <img src="./images/cards-1.png" alt="" />
-          </div>
-          <p>No Download. No Installs. Play games Instantly on Gamer.</p>
+          <img class="card-image" src="./images/cards-3.png" alt="" />
+          <p>Breaking game records like OG</p>
         </div>
         <div class="card">
-          <div class="card-image">
-            <img src="./images/cards-1.png" alt="" />
-          </div>
-          <p>No Download. No Installs. Play games Instantly on Gamer.</p>
+          <img class="card-image" src="./images/cards-4.png" alt="" />
+          <p>Breaking game records like OG</p>
         </div>
       </div>
     </div>
