Featured Section Added

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700;900&display=swap"
       rel="stylesheet"
     />
     <!-- Font-awesome icons -->
@@ -61,7 +61,7 @@
         <div class="hero-text-area">
           <div class="hero-text">
             <div class="hero-text-pre-heading">Play Like The</div>
-            <div class="hero-text-heading">G.O.A.T.</div>
+            <h1 class="hero-text-heading">G.O.A.T.</h1>
             <div class="bullet-points">
               <div class="points">
                 <img src="./images/icons/1-click.svg" alt="" /><span
@@ -69,15 +69,17 @@
                 >
               </div>
               <div class="points">
-                <img src="./images/icons/download.svg" alt="" />No Download
+                <img src="./images/icons/download.svg" alt="" /> No Download
               </div>
               <div class="points">
-                <img src="./images/icons/supporter.svg" alt="" />1000s of
+                <img src="./images/icons/supporter.svg" alt="" /> 1000s of
                 supported online games
               </div>
             </div>
             <div class="hero-text-button">
-              <a class="button-primary button-color-1" href="_blank">Sign Up</a>
+              <a class="button-primary button-color-1" href="_blank">
+                Sign Up</a
+              >
               <a class="button-primary button-color-2" href="_blank"
                 >Go Rogue</a
               >
@@ -141,6 +143,29 @@
           <img class="card-image" src="./images/cards-4.png" alt="" />
           <p>Breaking game records like OG</p>
         </div>
+      </div>
+    </div>
+    <div class="featured-section">
+      <div class="feature-1">
+        <div class="feature-text-1">
+          <div class="feature-text-container-1">
+            <h3 class="feature-text-1-heading">
+              Play Instantly,<br /><span>No Downloads<br />No Installs.</span>
+            </h3>
+            <p>
+              Play games online for free without downloading. Just click the
+              Play button and play instantly in your browser.
+            </p>
+          </div>
+        </div>
+        <div class="feature-image-1">
+          <img src="./images/play-instant-1.png" alt="" />
+        </div>
+        <img
+          class="floating-image-1"
+          src="./images/play-instant-2.png"
+          alt=""
+        />
       </div>
     </div>
   </body>
