Featured Section 2 Added

--- a/index.html
+++ b/index.html
@@ -149,9 +149,9 @@
       <div class="feature-1">
         <div class="feature-text-1">
           <div class="feature-text-container-1">
-            <h3 class="feature-text-1-heading">
-              Play Instantly,<br /><span>No Downloads<br />No Installs.</span>
-            </h3>
+            <div class="feature-text-1-heading">
+              <span> Play Instantly,<br /></span>No Downloads<br />No Installs.
+            </div>
             <p>
               Play games online for free without downloading. Just click the
               Play button and play instantly in your browser.
@@ -164,6 +164,28 @@
         <img
           class="floating-image-1"
           src="./images/play-instant-2.png"
+          alt=""
+        />
+      </div>
+      <div class="feature-2">
+        <div class="feature-text-2">
+          <div class="feature-text-container-2">
+            <div class="feature-text-2-heading">
+              <span> Play Instantly,<br /></span>No Downloads<br />No Installs.
+            </div>
+            <p>
+              PC. dad’s phone, mom’s tablet, or your Chromebook, with Gamer you
+              can play your favorite games online for free, any time, anywhere ,
+              on any device.
+            </p>
+          </div>
+        </div>
+        <div class="feature-image-2">
+          <img src="./images/play-instant-3.png" alt="" />
+        </div>
+        <img
+          class="floating-image-2"
+          src="./images/play-instant-4.png"
           alt=""
         />
       </div>
