--- a/index.html
+++ b/index.html
@@ -190,5 +190,47 @@
         />
       </div>
     </div>
+    <div class="career-section">
+      <div class="career-container">
+        <div class="career-text-area">
+          <div class="career-heading">
+            Careers
+            <p>
+              Gamer is driven to create the best and most fun games for our
+              millions of players all around the world, and we,re always on the
+              lookout for more top talent to join our growing team. If you,d
+              like to help us make great games and be a part of Gamers bright
+              future, we,d love to hear from you.
+            </p>
+          </div>
+          <div class="jobs">
+            <div class="job-list jobs-short-description">
+              <h4>
+                Multimedia Artist +><br />
+                Data Engineer +<br />
+                Android Engineer +<br />
+                Server Developer +<br />
+                Group Financial Accountant +<br />
+                Senior User Acquisition Specialist +
+              </h4>
+            </div>
+            <div class="job-location jobs-short-description">
+              <h4>
+                Lisbon, Portugal<br />
+                Lisbon, Portugal<br />
+                Zoetermeer, Netherlands<br />
+                Lisbon, Portugal<br />
+                London,United Kingdom<br />
+                Lisbon, Portugal
+              </h4>
+            </div>
+          </div>
+          <a class="job-button" href="_blank">See all positions</a>
+        </div>
+        <div class="career-image">
+          <img src="./images/children.png" alt="" />
+        </div>
+      </div>
+    </div>
   </body>
 </html>
