All Sections Added

--- a/index.html
+++ b/index.html
@@ -232,5 +232,112 @@
         </div>
       </div>
     </div>
+    <div class="games-genre-section">
+      <div class="games-genre-container">
+        <a class="game" href="_blank"
+          ><img src="./images/action-games.png" alt="" /><span
+            >Action Games</span
+          ></a
+        >
+        <a class="game" href="_blank"
+          ><img src="./images/adventure-games.png" alt="" /><span
+            >Adventure Games</span
+          ></a
+        >
+        <a class="game" href="_blank"
+          ><img src="./images/arcade-games.png" alt="" /><span
+            >Arcade Games</span
+          ></a
+        >
+        <a class="game" href="_blank"
+          ><img src="./images/educational-games.png" alt="" /><span
+            >Educational Games</span
+          ></a
+        >
+        <a class="game" href="_blank"
+          ><img src="./images/word-games.png" alt="" /><span
+            >Word Games</span
+          ></a
+        >
+
+        <a class="game" href="_blank"
+          ><img src="./images/role-playing-games.png" alt="" /><span
+            >Role Playing Games</span
+          ></a
+        >
+        <a class="game" href="_blank"
+          ><img src="./images/music-audio-games.png" alt="" /><span
+            >Music & Audio Games</span
+          ></a
+        >
+        <a class="game" href="_blank"
+          ><img src="./images/puzzle-games.png" alt="" /><span
+            >Puzzle Games</span
+          ></a
+        >
+        <a class="game" href="_blank"
+          ><img src="./images/strategy-games.png" alt="" /><span
+            >Strategy Games</span
+          ></a
+        >
+      </div>
+    </div>
+    <footer>
+      <div class="footer-container">
+        <div class="footer-logo-container">
+          <img class="logo-icon" src="./images/logo-icon.png" alt="logo" />
+          <h2 class="footer-logo"><span class="pink-letter">G</span>amer</h2>
+        </div>
+        <ul class="footer-links-container">
+          <li><a href="_blank" class="footer-links">Our Story</a></li>
+          <li><a href="_blank" class="footer-links">Games</a></li>
+          <li><a href="_blank" class="footer-links"></a>Web Games</li>
+          <li><a href="_blank" class="footer-links"></a>Careers</li>
+          <li><a href="_blank" class="footer-links"></a>Support</li>
+          <li><a href="_blank" class="footer-links"></a>My Account</li>
+        </ul>
+        <div class="social-media-icons">
+          <a href="_blank" class="some-icon"
+            ><img src="./images/Social-icons/twitter.png" alt=""
+          /></a>
+          <a href="_blank" class="some-icon"
+            ><img src="./images/Social-icons/facebook.png" alt=""
+          /></a>
+          <a href="_blank" class="some-icon"
+            ><img src="./images/Social-icons/youtube.png" alt=""
+          /></a>
+          <a href="_blank" class="some-icon"
+            ><img src="./images/Social-icons/linkedin.png" alt=""
+          /></a>
+          <a href="_blank" class="some-icon"
+            ><img src="./images/Social-icons/instagram.png" alt=""
+          /></a>
+          <a href="_blank" class="some-icon"
+            ><img src="./images/Social-icons/apple.png" alt=""
+          /></a>
+        </div>
+        <div class="useful-links">
+          <ul class="useful-links-container">
+            <li>
+              <a href="_blank" class="footer-useful-links"
+                >Terms and Conditions</a
+              >
+            </li>
+            <li>
+              <a href="_blank" class="footer-useful-links">Privacy Policy</a>
+            </li>
+            <li>
+              <a href="_blank" class="footer-useful-links">Cookie Policy</a>
+            </li>
+            <li>
+              <a href="_blank" class="footer-useful-links">Privacy Settings</a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer-note">
+          Play Games @ Gamer @ 2000-2023 Gamer Bangladesh
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
