--- a/index.html
+++ b/index.html
@@ -27,17 +27,20 @@
       rel="icon"
       type="image/png"
       sizes="151x71"
-      href="./images/logo-icon.png"
+      href="./images/favicon.png"
     />
     <!-- custom css -->
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
+    <!-- Navbar -->
     <nav>
       <div class="nav-container">
         <div class="logo-container">
-          <img class="logo-icon" src="./images/logo-icon.png" alt="logo" />
-          <h2><span class="pink-letter">G</span>amer</h2>
+          <a href="index.html"
+            ><img class="logo-icon" src="./images/logo-icon.png" alt="logo" />
+            <h2><span class="pink-letter">G</span>amer</h2></a
+          >
         </div>
         <div class="nav-links">
           <li><a href="_blank">About Us</a></li>
@@ -56,6 +59,7 @@
         </div>
       </div>
     </nav>
+    <!-- Hero Section -->
     <div class="hero-section">
       <div class="hero-container">
         <div class="hero-text-area">
@@ -101,6 +105,7 @@
         alt=""
       />
     </div>
+    <!-- Gamer Section -->
     <div class="gamer-section">
       <div class="gamer-container">
         <div class="gamer-image">
@@ -120,6 +125,7 @@
         </div>
       </div>
     </div>
+    <!-- Funny Video Section -->
     <div class="funny-video-section">
       <div class="funny-video-heading">
         Online Games <span>Funny Videos</span>
@@ -145,6 +151,7 @@
         </div>
       </div>
     </div>
+    <!-- Features Section -->
     <div class="featured-section">
       <div class="feature-1">
         <div class="feature-text-1">
@@ -190,6 +197,7 @@
         />
       </div>
     </div>
+    <!-- Career Section -->
     <div class="career-section">
       <div class="career-container">
         <div class="career-text-area">
@@ -232,6 +240,7 @@
         </div>
       </div>
     </div>
+    <!-- Games Genre Section -->
     <div class="games-genre-section">
       <div class="games-genre-container">
         <a class="game" href="_blank"
@@ -282,11 +291,16 @@
         >
       </div>
     </div>
+    <!-- Footer Section -->
     <footer>
       <div class="footer-container">
         <div class="footer-logo-container">
-          <img class="logo-icon" src="./images/logo-icon.png" alt="logo" />
-          <h2 class="footer-logo"><span class="pink-letter">G</span>amer</h2>
+          <a href="index.html">
+            <img class="logo-icon" src="./images/logo-icon.png" alt="logo" />
+            <h2 class="footer-logo">
+              <span class="pink-letter">G</span>amer
+            </h2></a
+          >
         </div>
         <ul class="footer-links-container">
           <li><a href="_blank" class="footer-links">Our Story</a></li>
