--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       </div>
     </div>
     <!-- Funny Video Section -->
-    <div class="funny-video-section">
+    <!-- <div class="funny-video-section">
       <div class="funny-video-heading">
         Online Games <span>Funny Videos</span>
       </div>
@@ -150,9 +150,9 @@
           <p>Breaking game records like OG</p>
         </div>
       </div>
-    </div>
+    </div> -->
     <!-- Features Section -->
-    <div class="featured-section">
+    <!-- <div class="featured-section">
       <div class="feature-1">
         <div class="feature-text-1">
           <div class="feature-text-container-1">
@@ -196,9 +196,9 @@
           alt=""
         />
       </div>
-    </div>
+    </div> -->
     <!-- Career Section -->
-    <div class="career-section">
+    <!-- <div class="career-section">
       <div class="career-container">
         <div class="career-text-area">
           <div class="career-heading">
@@ -239,9 +239,9 @@
           <img src="./images/children.png" alt="" />
         </div>
       </div>
-    </div>
+    </div> -->
     <!-- Games Genre Section -->
-    <div class="games-genre-section">
+    <!-- <div class="games-genre-section">
       <div class="games-genre-container">
         <a class="game" href="_blank"
           ><img src="./images/action-games.png" alt="" /><span
@@ -290,9 +290,9 @@
           ></a
         >
       </div>
-    </div>
+    </div> -->
     <!-- Footer Section -->
-    <footer>
+    <!-- <footer>
       <div class="footer-container">
         <div class="footer-logo-container">
           <a href="index.html">
@@ -352,6 +352,6 @@
           Play Games @ Gamer @ 2000-2023 Gamer Bangladesh
         </div>
       </div>
-    </footer>
+    </footer> -->
   </body>
 </html>
