Hover Effects Added

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       </div>
     </div>
     <!-- Funny Video Section -->
-    <!-- <div class="funny-video-section">
+    <div class="funny-video-section">
       <div class="funny-video-heading">
         Online Games <span>Funny Videos</span>
       </div>
@@ -134,25 +134,69 @@
       <p>A Collection of Hilarious Videos to Brighten Your Day</p>
       <div class="cards-container">
         <div class="card">
-          <img class="card-image" src="./images/cards-1.png" alt="" />
+          <div class="card-image-container">
+            <img class="card-image" src="./images/cards-1.png" alt="" />
+            <div class="card-overlay">
+              <div class="content">
+                <i
+                  class="fa-regular fa-circle-play fa-lg"
+                  style="color: #ffffff"
+                ></i>
+                <h1>Watch Now</h1>
+              </div>
+            </div>
+          </div>
           <p>No Download. No Installs. Play games Instantly on Gamer.</p>
         </div>
         <div class="card">
-          <img class="card-image" src="./images/cards-2.png" alt="" />
+          <div class="card-image-container">
+            <img class="card-image" src="./images/cards-2.png" alt="" />
+            <div class="card-overlay">
+              <div class="content">
+                <i
+                  class="fa-regular fa-circle-play fa-lg"
+                  style="color: #ffffff"
+                ></i>
+                <h1>Watch Now</h1>
+              </div>
+            </div>
+          </div>
           <p>Did you score? #unblockedgames #school</p>
         </div>
         <div class="card">
-          <img class="card-image" src="./images/cards-3.png" alt="" />
+          <div class="card-image-container">
+            <img class="card-image" src="./images/cards-3.png" alt="" />
+            <div class="card-overlay">
+              <div class="content">
+                <i
+                  class="fa-regular fa-circle-play fa-lg"
+                  style="color: #ffffff"
+                ></i>
+                <h1>Watch Now</h1>
+              </div>
+            </div>
+          </div>
           <p>Breaking game records like OG</p>
         </div>
         <div class="card">
-          <img class="card-image" src="./images/cards-4.png" alt="" />
-          <p>Breaking game records like OG</p>
+          <div class="card-image-container">
+            <img class="card-image" src="./images/cards-4.png" alt="" />
+            <div class="card-overlay">
+              <div class="content">
+                <i
+                  class="fa-regular fa-circle-play fa-lg"
+                  style="color: #ffffff"
+                ></i>
+                <h1>Watch Now</h1>
+              </div>
+            </div>
+          </div>
+          <p>Busted gaming on school laptop, but you are still lit.</p>
         </div>
       </div>
-    </div> -->
+    </div>
     <!-- Features Section -->
-    <!-- <div class="featured-section">
+    <div class="featured-section">
       <div class="feature-1">
         <div class="feature-text-1">
           <div class="feature-text-container-1">
@@ -178,7 +222,7 @@
         <div class="feature-text-2">
           <div class="feature-text-container-2">
             <div class="feature-text-2-heading">
-              <span> Play Instantly,<br /></span>No Downloads<br />No Installs.
+              <span> Play Games <br />Online </span>Anywhere,<br />Anytime!
             </div>
             <p>
               PC. dad’s phone, mom’s tablet, or your Chromebook, with Gamer you
@@ -196,9 +240,9 @@
           alt=""
         />
       </div>
-    </div> -->
+    </div>
     <!-- Career Section -->
-    <!-- <div class="career-section">
+    <div class="career-section">
       <div class="career-container">
         <div class="career-text-area">
           <div class="career-heading">
@@ -239,9 +283,9 @@
           <img src="./images/children.png" alt="" />
         </div>
       </div>
-    </div> -->
+    </div>
     <!-- Games Genre Section -->
-    <!-- <div class="games-genre-section">
+    <div class="games-genre-section">
       <div class="games-genre-container">
         <a class="game" href="_blank"
           ><img src="./images/action-games.png" alt="" /><span
@@ -290,9 +334,9 @@
           ></a
         >
       </div>
-    </div> -->
+    </div>
     <!-- Footer Section -->
-    <!-- <footer>
+    <footer>
       <div class="footer-container">
         <div class="footer-logo-container">
           <a href="index.html">
@@ -352,6 +396,6 @@
           Play Games @ Gamer @ 2000-2023 Gamer Bangladesh
         </div>
       </div>
-    </footer> -->
+    </footer>
   </body>
 </html>
