Mobile Large Responsiveness Added

--- a/index.html
+++ b/index.html
@@ -349,10 +349,10 @@
         <ul class="footer-links-container">
           <li><a href="_blank" class="footer-links">Our Story</a></li>
           <li><a href="_blank" class="footer-links">Games</a></li>
-          <li><a href="_blank" class="footer-links"></a>Web Games</li>
-          <li><a href="_blank" class="footer-links"></a>Careers</li>
-          <li><a href="_blank" class="footer-links"></a>Support</li>
-          <li><a href="_blank" class="footer-links"></a>My Account</li>
+          <li><a href="_blank" class="footer-links">Web Games</a></li>
+          <li><a href="_blank" class="footer-links">Careers</a></li>
+          <li><a href="_blank" class="footer-links">Support</a></li>
+          <li><a href="_blank" class="footer-links">My Account</a></li>
         </ul>
         <div class="social-media-icons">
           <a href="_blank" class="some-icon"
