--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <h2><span class="pink-letter">G</span>amer</h2></a
           >
         </div>
-        <div class="nav-links">
+        <ul class="nav-links">
           <li><a href="_blank">About Us</a></li>
           <li><a href="_blank">Developers</a></li>
           <li class="social-button">
@@ -56,7 +56,7 @@
                 alt="Go to Tiktok"
             /></a>
           </li>
-        </div>
+        </ul>
       </div>
     </nav>
     <!-- Hero Section -->
